[gd_scene load_steps=6 format=3 uid="uid://lunrw4fa2uku"]

[ext_resource type="Script" path="res://Scripts/UIs/GameOverScreen.gd" id="1_1s5qn"]
[ext_resource type="FontFile" uid="uid://c74f8yr85l71q" path="res://Assets/Fonts/DIOGENES.ttf" id="2_n85sa"]
[ext_resource type="Texture2D" uid="uid://d2doampm8ohis" path="res://Assets/UI/CadreUI2.png" id="3_74oaw"]
[ext_resource type="Theme" uid="uid://typdjdvo3yn6" path="res://LabelSettings/Buttons2.tres" id="4_7dk8l"]

[sub_resource type="LabelSettings" id="LabelSettings_gkjl1"]
font = ExtResource("2_n85sa")
font_size = 92
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="game_over_screen" type="Control" node_paths=PackedStringArray("game_over_label", "retry_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1s5qn")
game_over_label = NodePath("VBoxContainer/StageFinishLabel")
retry_button = NodePath("VBoxContainer/NinePatchRect/RetryButton")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.208854
anchor_top = 0.0518519
anchor_right = 0.791146
anchor_bottom = 0.949074
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="StageFinishLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Game Over / Stage Completed"
label_settings = SubResource("LabelSettings_gkjl1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_74oaw")

[node name="RetryButton" type="Button" parent="VBoxContainer/NinePatchRect"]
custom_minimum_size = Vector2(400, 120)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../NinePatchRect2/QuitButton")
focus_neighbor_bottom = NodePath("../../NinePatchRect2/QuitButton")
theme = ExtResource("4_7dk8l")
theme_override_fonts/font = ExtResource("2_n85sa")
theme_override_font_sizes/font_size = 52
text = "RETRY"
flat = true

[node name="NinePatchRect2" type="NinePatchRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_74oaw")

[node name="QuitButton" type="Button" parent="VBoxContainer/NinePatchRect2"]
custom_minimum_size = Vector2(400, 120)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../NinePatchRect/RetryButton")
focus_neighbor_bottom = NodePath("../../NinePatchRect/RetryButton")
theme = ExtResource("4_7dk8l")
theme_override_fonts/font = ExtResource("2_n85sa")
theme_override_font_sizes/font_size = 52
text = "QUIT"
flat = true

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="button_up" from="VBoxContainer/NinePatchRect/RetryButton" to="." method="_on_retry_button_button_up"]
[connection signal="button_up" from="VBoxContainer/NinePatchRect2/QuitButton" to="." method="_on_quit_button_button_up"]
